# oox-rs

./: .gitignore  Cargo.toml
src/: error.rs  lib.rs  xml.rs
src/docx/wml/: document.rs  drawing.rs  footnotes.rs  numbering.rs  settings.rs  styles.rs  table.rs  util.rs
src/pptx/: package.rs
src/pptx/pml/: animation.rs  presentation.rs  slides.rs  util.rs
src/shared/: docprops.rs  relationship.rs
src/shared/drawingml/: audiovideo.rs  colors.rs  coordsys.rs  core.rs  picture.rs  shapedefs.rs  shapeprops.rs  sharedstylesheet.rs  styles.rs  util.rs
src/shared/drawingml/text/: bodyformatting.rs  bullet.rs  paragraphs.rs  runformatting.rs
tests/: integration_test.rs
tests/files/: sample.pptx
